--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Send Email on Branch Change
 on:
   push:
     branches:
-      - '*'
+      - 'main'
 jobs:
   send_email:
     runs-on: ubuntu-latest
@@ -15,7 +15,8 @@ jobs:
     - name: Send mail
       uses: dawidd6/action-send-mail@v3
       with:
-        connection_url: ${{ secrets.MAIL_CONNECTION }}
+        username: likeasimili@gmail.com
+        password: LikeASimili*2023
         server_address: smtp.gmail.com
         server_port: 465
         subject: Github Actions job result
