--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
         server_port: 465
         subject: Github Actions job result
         to: rxmagics@gmail.com
-        from: Luke Skywalker # <user@example.com>
+        from: likeasimili@gmail.com
         body: Build job of ${{ github.repository }} completed successfully!
