--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ jobs:
     - name: Send mail
       uses: dawidd6/action-send-mail@v3.11.0
       with:
-        username: likeasimili@gmail.com
-        password: LikeASimili*2023
+        username: ${{secrets.MAIL_USERNAME}}
+        password: ${{secrets.MAIL_PASSWORD}}
         server_address: smtp.gmail.com
         server_port: 465
         subject: Github Actions job result
         to: rxmagics@gmail.com
-        from: likeasimili@gmail.com
+        from: WG SE
         body: Build job of ${{ github.repository }} completed successfully!
