--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../build/Demo/LAGodotDemo.html"
+export_path="../build/Build/LAGodotDemo.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../export/Windows/LAGodotDemo.exe"
+export_path="../build/Build/LAGodotDemo.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
